# notifications_f_b

./: README.md
backend/: .env  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
backend/notifications/: admin.py  api.py  bases.py  choices.py  models.py  serializers.py  urls.py
backend/notifications/fixtures/: notifications.json
backend/notifications/migrations/: 0001_initial.py  0002_alter_notification_notification_type.py  0003_alter_notification_notification_type.py  0004_delete_statistics.py
backend/notifications/tests/: notification_api_test.py
backend/notifications_system/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: App.tsx  Dockerfile  docker-compose.yml  package-lock.json  package.json
frontend/components/: AuthContainer.tsx  AuthForm.tsx  Dashboard.tsx  NotificationStats.tsx
frontend/pages/: AdminDashboardPage.tsx  StatisticsPage.tsx  UserDashboardPage.tsx  auth.tsx  index.tsx
